Styles for radios and checkboxes and selects. Fix spacing on validated fields

--- a/src/scss/field-errors.scss
+++ b/src/scss/field-errors.scss
@@ -3,7 +3,7 @@
 }
 
 @include oFtFormsPlaceholderOptionalSelector('%o-ft-forms__label--select--error %o-ft-forms__label--textarea--error',
-  '.o-ft-forms--error select.o-ft-forms__field, .o-ft-forms--error textarea.o-ft-forms__field') {
+  '.o-ft-forms--error .o-ft-forms__field--select, .o-ft-forms--error .o-ft-forms__field--textarea') {
 	margin-bottom: 0;
 }
 
@@ -12,7 +12,6 @@
 	margin-bottom: 0;
     border-color: oColorsGetColorFor(forms-label-error-border);
     color: oColorsGetColorFor(forms-error-text);
-
 }
 
 @include oFtFormsPlaceholderOptionalSelector('%o-ft-forms__field--checkbox--error, %o-ft-forms__field--select--error',
@@ -23,6 +22,7 @@
 @include oFtFormsPlaceholderOptionalSelector('%o-ft-forms__checkboxradio-sibling-__label',
   '.o-ft-forms--error .o-ft-forms__field[type="checkbox"] + .o-ft-forms__label, .o-ft-forms--error .o-ft-forms__field[type="radio"] + .o-ft-forms__label') {
 	color: oColorsGetColorFor(forms-label-text);
+	margin-bottom: 6px;
 }
 
 @include oFtFormsPlaceholderOptionalSelector('%o-ft-forms__errortext', '.o-ft-forms__errortext') {
@@ -43,6 +43,7 @@
   font-size: 18px;
   top: 25px;
   right: 10px;
-  content: "\2717";
+  content: "\2716";
   color: oColorsGetColorFor(forms-error-text);
+  font-weight: bold;
 }
